packages: add temp status
Signed-off-by: pppig236 <priv@pppig236.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "package/luci-theme-argon"]
 	path = package/luci-theme-argon
 	url = https://github.com/jerrykuku/luci-theme-argon
+[submodule "package/luci-app-temp-status"]
+	path = package/luci-app-temp-status
+	url = https://github.com/gSpotx2f/luci-app-temp-status
